--- a/blog3/index.html
+++ b/blog3/index.html
@@ -124,14 +124,6 @@
             text-align: center;
         }
     </style>
-
-    <script
-      src="https://cdn.utmify.com.br/scripts/utms/latest.js"
-      data-utmify-prevent-xcod-sck
-      data-utmify-is-click-bank
-      async
-      defer
-    ></script>
 </head>
 <body>
     <!-- Header superior com faixa vermelha -->
@@ -155,19 +147,19 @@
 
         <!-- Seção de vídeo -->
         <div class="video-section">
-            <div id="vid_67d6cbd6d10d17c77838f9b1" style="position: relative; width: 100%; padding: 100% 0 0;"> <img id="thumb_67d6cbd6d10d17c77838f9b1" src="https://images.converteai.net/10d15ba1-6af1-4ff4-a726-9a64f39ff19d/players/67d6cbd6d10d17c77838f9b1/thumbnail.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; display: block;" alt="thumbnail"> <div id="backdrop_67d6cbd6d10d17c77838f9b1" style=" -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); position: absolute; top: 0; height: 100%; width: 100%; "></div> </div> <script type="text/javascript" id="scr_67d6cbd6d10d17c77838f9b1"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/10d15ba1-6af1-4ff4-a726-9a64f39ff19d/players/67d6cbd6d10d17c77838f9b1/player.js", s.async=!0,document.head.appendChild(s); </script>
+            <div id="vid_67b63ffd705ce8f1fdfc2a31" style="position: relative; width: 100%; padding: 100% 0 0;"> <img id="thumb_67b63ffd705ce8f1fdfc2a31" src="https://images.converteai.net/10d15ba1-6af1-4ff4-a726-9a64f39ff19d/players/67b63ffd705ce8f1fdfc2a31/thumbnail.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; display: block;" alt="thumbnail"> <div id="backdrop_67b63ffd705ce8f1fdfc2a31" style=" -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); position: absolute; top: 0; height: 100%; width: 100%; "></div> </div> <script type="text/javascript" id="scr_67b63ffd705ce8f1fdfc2a31"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/10d15ba1-6af1-4ff4-a726-9a64f39ff19d/players/67b63ffd705ce8f1fdfc2a31/player.js", s.async=!0,document.head.appendChild(s); </script>
         </div>
 
         <!-- Botão de ação -->
         <div>
-            <a href="https://selfcarehost.online/uxx571/" target="_blank">
+            <a href="https://hop.clickbank.net/?affiliate=salecapu&vendor=glycoshiel&pg=dtc" target="_blank">
                 <button class="action-button" id="action-button">Yes, I want to Eliminate Diabetes!</button>
             </a>
         </div>
 
         <!-- Imagem do rodapé (Footer) com link clicável -->
         <div class="footer-image" id="footer-image">
-            <a href="https://selfcarehost.online/uxx571/" target="_blank">
+            <a href="https://hop.clickbank.net/?affiliate=salecapu&vendor=glycoshiel&pg=dtc" target="_blank">
                 <img src="images/CARTOES-.webp" alt="Footer Image">
             </a>
         </div>
@@ -196,7 +188,7 @@
             }, delay);
         }
 
-        showButtonAfterDelay(0);
+        showButtonAfterDelay(21);
     </script>
 
     <!-- Código parametro link -->
